--- a/package.json
+++ b/package.json
@@ -1,15 +1,50 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "@inertiajs/svelte": "^1.0.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "axios": "^1.1.2",
+    "laravel-vite-plugin": "^0.7.2",
+    "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "@inertiajs/svelte": "^1.0.2",
+    "asynckit": "^0.4.0",
+    "axios": "^1.3.4",
+    "combined-stream": "^1.0.8",
+    "esbuild": "^0.16.17",
+    "deepmerge": "^4.3.0",
+    "call-bind": "^1.0.2",
+    "delayed-stream": "^1.0.0",
+    "follow-redirects": "^1.15.2",
+    "form-data": "^4.0.0",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.2.0",
+    "has": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "laravel-vite-plugin": "^0.7.4",
+    "lodash.isequal": "^4.5.0",
+    "is-core-module": "^2.11.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "nanoid": "^3.3.4",
+    "nprogress": "^0.2.0",
+    "path-parse": "^1.0.7",
+    "object-inspect": "^1.12.3",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "postcss": "^8.4.21",
+    "qs": "^6.11.1",
+    "proxy-from-env": "^1.1.0",
+    "resolve": "^1.22.1",
+    "rollup": "^3.19.1",
+    "side-channel": "^1.0.4",
+    "source-map-js": "^1.0.2",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "svelte": "^3.56.0",
+    "vite": "^4.1.4",
+    "vite-plugin-full-reload": "^1.0.5"
+  }
 }
