--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module", //Important for some reason
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -7,7 +8,10 @@
   "devDependencies": {
     "axios": "^1.1.2",
     "laravel-vite-plugin": "^0.7.2",
-    "vite": "^4.0.0"
+    "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "lodash": "^4.17.19", //maybe optional
+    "postcss": "8.1.14", //maybe optional
+    "vite": "^4.0.0" //maybe optional
   },
   "dependencies": {
     "@inertiajs/svelte": "^1.0.2",
