--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "type": "module", //Important for some reason
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -9,9 +9,9 @@
     "axios": "^1.1.2",
     "laravel-vite-plugin": "^0.7.2",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
-    "lodash": "^4.17.19", //maybe optional
-    "postcss": "8.1.14", //maybe optional
-    "vite": "^4.0.0" //maybe optional
+    "lodash": "^4.17.19",
+    "postcss": "8.1.14",
+    "vite": "^4.0.0"
   },
   "dependencies": {
     "@inertiajs/svelte": "^1.0.2",
