Add algosdk to dependencies

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@inertiajs/svelte": "^1.0.2",
-    "svelte": "^3.56.0"
+    "svelte": "^3.56.0",
+    "algosdk": "^2.1.0"
   }
 }
